...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

...
                android:layout_height="?attr/actionBarSize"
                android:background="@color/toolbarColor"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

            <TextView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:text="BACK"
                android:textColor="@color/textOnToolBar"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/nameTrip"
                android:layout_width="match_parent"
...
                android:text="New Trip"
                android:textColor="@color/textOnToolBar"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
...
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="0.3"
                        android:background="#eaebec">

                        <EditText
                            android:id="@+id/edNameTrip"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="10dp"
                            android:hint="@string/TripName"
                            android:inputType="text"
                            android:textColor="@color/colorPrimary"
...
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="0.3"
                        android:background="#eaebec">

                        <EditText
                            android:id="@+id/edDescriptionTrip"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="10dp"
                            android:hint="Description"
                            android:inputType="text"
                            android:textColor="@color/colorPrimary"
...

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/pickTime"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_alignParentBottom="true"
                                android:layout_marginLeft="10dp"
                                android:gravity="center_vertical"
                                android:hint="Time"
...

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <TextView
                                    android:id="@+id/pickEndDate"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_alignParentBottom="true"
                                    android:layout_toEndOf="@+id/textView2"
                                    android:layout_toRightOf="@+id/textView2"
                                    android:ems="18"
...

                                <TextView
                                    android:id="@+id/textView2"
                                    android:layout_width="30dp"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:layout_toEndOf="@+id/pickBeginDate"
                                    android:layout_toRightOf="@+id/pickBeginDate"
                                    android:gravity="center"
                                    android:text=" to "
                                    android:textColor="#9f7060"
                                    android:textSize="14dp" />

...

            </RelativeLayout>

        </ScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            app:backgroundTint="@color/floatBtnColor"
            app:srcCompat="@android:drawable/ic_menu_save" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp"
...
