...
            android:layout_height="wrap_content"
            android:background="@color/toolbarColor"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:text="EDIT"
            android:textColor="@color/textOnToolBar"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
...
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="2dp"
                            android:layout_weight="1.3">

                            <TextView
                                android:id="@+id/companionsBtn"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="right"
                                android:text="VIEW MORE ▷     "
                                android:textColor="#468499"
                                android:textSize="11dp" />
...
