<resources>
    <string name="app_name">UNIFY</string>
    <string name="facebook_app_id">144458252835047</string>
    <string name="fb_login_protocol_scheme">fb144458252835047</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">DELETE</string>
    <string name="Description">Description :</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyB_jFex6FpnB4FbhKULbzkwI7y5C4keCmY
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="TripName">Trip Name</string>

</resources>
